--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ html {
 
 .btn:hover {
   background-color: #6359a6;
-  border-color: #4d4583;
+  border-color: transparent;
 }
 
 h1 {
@@ -185,11 +185,11 @@ h1 {
     max-width: 75%;
   }
 
-  .footer-nav {
+  .footer-nav li {
     position: relative;
     bottom: 0;
     display: inline-flex;
-    width: 100%;
+
   }
 
   .footer-nav a {
@@ -221,13 +221,12 @@ h1 {
   }
 
   .banner {
-    padding-top: 2%;
+    padding-top: 2em;
   }
 
   .banner-content {
-    margin-top: 6em;
+    margin-top: 5em;
     max-width: 65%;
-    padding-bottom: 5em 0 3em;
   }
 
 }
