--- a/css/main.css
+++ b/css/main.css
@@ -89,18 +89,18 @@ html {
   background-color: #4d4583;
 }
 
-
 .banner {
-  background: url("../images/banner.jpg") no-repeat center center/ cover;
+  background: linear-gradient(to bottom, rgba(0,0,0, 0), rgba(0,0,0, 0.45)), url("../images/banner.jpg") no-repeat center center/ cover;
   padding-top: 10em;
   color: #fff;
-  border-bottom: 8px solid #4d4583;
+  border-bottom: 15px solid #4d4583;
 }
 
 .banner-content {
   width: 85%;
   padding: 3em 0;
   margin-left: 5%;
+  text-align: center;
 }
 
 .btn {
@@ -112,7 +112,6 @@ html {
   background-color: transparent;
   margin-top: 2em;
   width: 10em;
-  text-align: center;
 }
 
 .btn:hover {
@@ -122,7 +121,7 @@ html {
 
 h1 {
   font-family: Oswald, sans-serif;
-  margin-bottom: .5em;
+  margin-bottom: .25em;
 }
 
 .section {
@@ -153,6 +152,14 @@ h1 {
   background-color: #4d4583;
 }
 
+footer small {
+  background-color: #4d4583;
+  display: block;
+  color: #fff;
+  text-align: center;
+  padding: .5em 0;
+}
+
 @media only screen and (min-width: 25em) {
 
   .banner-content {
@@ -162,6 +169,10 @@ h1 {
 }
 
 @media only screen and (min-width: 38em) {
+
+  .banner-content {
+    max-width: 80%;
+  }
 
 }
 
@@ -188,22 +199,22 @@ h1 {
   }
 
   .nav-active {
-    background: url("../images/paw.svg") no-repeat .3em .4em / 45px;
-  }
-
-  .footer-active {
-    background:
+    background: url("../images/paw.svg") no-repeat -3px -1px / 90px;
   }
 
   .banner-content {
-    max-width: 75%;
+    max-width: 80%;
+    text-align: left;
+  }
+
+  .footer-active {
+    background-color: #4d4583;
   }
 
   .footer-nav li {
     position: relative;
     bottom: 0;
     display: inline-flex;
-
   }
 
   .footer-nav a {
@@ -236,7 +247,7 @@ h1 {
 
   .banner-content {
     margin-top: 5em;
-    max-width: 65%;
+    max-width: 55%;
   }
 
 }
