--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html {
   background-color: #6359a6;
   border-bottom: 8px solid #4d4583;
   padding: 0;
+  z-index: 5;
 }
 
 .logo {
@@ -90,7 +91,7 @@ html {
 }
 
 .banner {
-  background: linear-gradient(to bottom, rgba(0,0,0, 0), rgba(0,0,0, 0.45)), url("../images/banner.jpg") no-repeat center center/ cover;
+  background: linear-gradient(to bottom, rgba(0, 0 , 0, 0), rgba(0, 0, 0, .45)), url("../images/banner.jpg") no-repeat center center/ cover;
   padding-top: 10em;
   color: #fff;
   border-bottom: 15px solid #4d4583;
@@ -124,11 +125,23 @@ h1 {
   margin-bottom: .25em;
 }
 
-.section {
+h2 {
+  color: #4d4583;
+  font-family: Oswald, sans-serif;
+  padding-top: 1em;
+}
+
+.pic-style {
+  border-radius: 5px;
+  border: 10px solid #6359a6;
+}
+
+.section article {
   margin-top: 1em;
-  width: 90%;
-  margin-left: 5%;
+  margin-bottom: 1rem;
   text-align: justify;
+  position: relative;
+  z-index: 1;
 }
 
 .footer-nav {
@@ -199,7 +212,12 @@ footer small {
   }
 
   .nav-active {
-    background: url("../images/paw.svg") no-repeat -3px -1px / 90px;
+    background: url("../images/paw.svg") no-repeat center 1px / 90px;
+  }
+
+  .section article {
+    margin-top: 0;
+    margin-left: 1.5rem;
   }
 
   .banner-content {
@@ -247,7 +265,7 @@ footer small {
 
   .banner-content {
     margin-top: 5em;
-    max-width: 55%;
+    max-width: 56%;
   }
 
 }
