Add forms to adopt.html / Add 'newsletter' section to homepage

--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,22 @@ html {
 
 .btn {
   font-family: Oswald, sans-serif;
+  margin-top: 1em;
+  width: 8em;
+  border-radius: 8px;
+  background-color: #6359a6;
+  margin-top: 2em;
+  border: 5px solid #4d4583;
+}
+
+.btn:hover {
+  background-color: #4d4583;
+  border-color: transparent;
+
+}
+
+.ghost-btn {
+  font-family: Oswald, sans-serif;
   text-decoration: none;
   color: #fff;
   border-radius: 8px;
@@ -116,7 +132,7 @@ html {
   width: 10em;
 }
 
-.btn:hover {
+.ghost-btn:hover {
   background-color: #6359a6;
   border-color: transparent;
 }
@@ -130,6 +146,7 @@ h2 {
   color: #4d4583;
   font-family: Oswald, sans-serif;
   padding-top: 1em;
+  margin-bottom: 1rem;
 }
 
 .pic-style {
@@ -139,14 +156,42 @@ h2 {
 
 .section article {
   margin-top: 1em;
-  margin-bottom: 1rem;
-  text-align: justify;
-  position: relative;
-  z-index: 1;
+  text-align: left;
+}
+
+.newsletter {
+  text-align: center;
+}
+
+form {
+  text-align: center;
+}
+
+form input {
+  text-align: center;
 }
 
 footer {
   margin-top: 1.5rem;
+}
+
+label {
+  font-family: Oswald, sans-serif;
+  color: #4d4583;
+  margin-top: .5rem;
+  padding-bottom: .25rem;
+}
+
+input {
+  border-radius: 10px;
+  height: 3rem;
+  border-color: #4d4583;
+}
+
+textarea {
+  border-radius: 10px;
+  min-height: 10rem;
+  border-color: #4d4583;
 }
 
 .footer-nav {
@@ -228,6 +273,15 @@ footer small {
   .banner-content {
     max-width: 80%;
     text-align: left;
+  }
+
+  .newsletter article {
+    margin-left: 0;
+    text-align: center;
+  }
+
+  input {
+
   }
 
   .footer-active {
